src/objects/FRSession__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FR_AccessToken__c</fullName>
        <label>FR_AccessToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_ClientID__c</fullName>
        <label>FR_ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_ClientSecret__c</fullName>
        <label>FR_ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_ConnectURL__c</fullName>
        <description>URL to call APIs</description>
        <label>FR_ConnectURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FR_LastUpdate__c</fullName>
        <label>FR_LastUpdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FR_RefreshToken__c</fullName>
        <label>FR_RefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FRSession</label>
</CustomObject>